fix alignment bug

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,7 +2,7 @@
   // -webkit-animation: color-change-5x 8s linear infinite alternate both;
   // animation: color-change-5x 8s linear infinite alternate both;
   min-height: 100vh;
-  padding-left: 4em;
+  padding-left: 3em;
   padding-top: 3em;
 }
 
